assets/static/sass/layout/_post.scss
.postpage {
  main {
    display: flex;
    justify-content: center;
    background-color: $postpage-color;
    font-family: $post-font;

    @include brk-down($brk-x-huge) {
      justify-content: flex-start;
    }

    @include brk-down($brk-huge) {
      justify-content: center;
    }

    ::selection {
      background-color: rgba($postpage-ui-color, 0.2);
    }

    article {
      margin: 3rem 2rem;
      padding: 2rem 6rem;
      flex: 1;
      color: $postpage-ui-color;

      .article-wrapper {
        max-width: 1080px;
      }

      @include brk-down($brk-x-huge) {
        margin-left: 0;
        margin-top: 2rem;
        flex-basis: 960px;
      }

      @include brk-down($brk-huge) {
        margin-right: 0;
        padding: 1.2rem 3rem;
        flex: 1;
        min-width: 0;
      }

      @include brk-down($brk-large) {
        padding: 0 2rem;
      }

      @include brk-down($brk-small) {
        padding: 0 1.4rem;
      }

      @include brk-down($brk-x-tiny) {
        margin-top: 1.2rem;
        padding: 0 1rem 0 1.2rem;
      }

      .info {
        display: flex;
        align-items: flex-end;
        padding-bottom: 0.2rem;
        margin-bottom: 2rem;
        border-bottom: 1px solid rgba($postpage-ui-color, 0.2);
        position: relative;

        @include brk-down($brk-huge) {
          margin-bottom: 1.6rem;
        }

        @include brk-down($brk-large) {
          flex-flow: column;
          align-items: flex-start;
          margin-bottom: 1rem;
        }
      }

      .title {
        display: flex;
        position: relative;

        margin: 0;
        margin-right: auto;
        font-size: 2.4rem;

        i {
          font-size: 1.8rem;
          margin-right: 0.8rem;
          color: rgba($postpage-ui-color, 0.6);

          position: relative;
          top: 0.7rem;

          @include brk-down($brk-tiny) {
            display: none;
          }
        }

        @include brk-down($brk-huge) {
          font-size: 2.2rem;
          i {
            font-size: 1.6rem;
          }
        }

        @include brk-down($brk-large) {
          font-size: 2rem;
          i {
            font-size: 1.4rem;
          }
        }

        @include brk-down($brk-small) {
          font-size: 1.8rem;
          i {
            font-size: 1.2rem;
          }
        }

        @include brk-down($brk-x-tiny) {
          font-size: 1.5rem;
          i {
            font-size: 1rem;
          }
        }
      }

      .meta-data {
        margin: 0 0 0.3rem 1rem;
        font-size: 1.2rem;
        color: rgba($postpage-ui-color, 0.6);
        white-space: nowrap;

        @include brk-down($brk-large) {
          margin: 0.6rem 0 0.3rem;
        }

        @include brk-down($brk-small) {
          font-size: 1rem;
        }

        i {
          position: relative;
          top: 1px;
          margin-right: 0.3rem;
        }
      }

      .author {
        margin-top: auto;
        padding: 0 0.8rem 0.3rem 0;
      }

      .publish-date {
        padding-top: 0.3rem;
      }
    }
  }
}

